# kettr

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: kettr.cpp  kettr.hpp  main.cpp
test/: CMakeLists.txt  kettr.test.cpp  kettr.test.hpp  main.cpp
